--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Meu primeiro site em repositório</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu primeiro site em repositório</title>
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
@@ -12,4 +12,8 @@
         Fugiat delectus atque sit fugit illo adipisci distinctio 
         eum asperiores dignissimos, officiis eos deserunt harum 
         facilis, minus sapiente suscipit beatae et! Voluptatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Dicta repudiandae amet adipisci beatae aspernatur laudantium 
+        iure aliquam similique enim unde ipsum, minima in qui animi 
+        corporis deserunt, vitae ullam fugiat.</p>
 </body>
